# IfcOpenShell

cmake/: CMakeLists.txt
nix/: build-all.sh
src/ifcopenshell-javascript/: CMakeLists.txt  IfcJavascript.i  test.js
